[gd_scene load_steps=24 format=2]

[ext_resource path="res://Effects/ParticleTextures/flame_02.png" type="Texture" id=1]
[ext_resource path="res://Effects/ParticleTextures/flame_01.png" type="Texture" id=2]
[ext_resource path="res://Effects/ParticleTextures/smoke_04.png" type="Texture" id=3]
[ext_resource path="res://Effects/ParticleTextures/flame_04.png" type="Texture" id=4]
[ext_resource path="res://Effects/ParticleTextures/flame_03.png" type="Texture" id=5]
[ext_resource path="res://Effects/Fireball.gd" type="Script" id=6]

[sub_resource type="SpatialMaterial" id=1]
flags_transparent = true
flags_unshaded = true
vertex_color_use_as_albedo = true
params_billboard_mode = 3
particles_anim_h_frames = 1
particles_anim_v_frames = 1
particles_anim_loop = false
albedo_texture = ExtResource( 2 )

[sub_resource type="Gradient" id=2]
colors = PoolColorArray( 0.821711, 0.851563, 0.106011, 1, 1, 0.210938, 0, 0.796078 )

[sub_resource type="GradientTexture" id=3]
gradient = SubResource( 2 )

[sub_resource type="Curve" id=4]
_data = [ Vector2( 0, 1 ), 0.0, 0.0, 0, 0, Vector2( 1, 0.485923 ), -1.18919, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=5]
curve = SubResource( 4 )

[sub_resource type="ParticlesMaterial" id=6]
emission_shape = 1
emission_sphere_radius = 0.2
spread = 0.0
gravity = Vector3( 0, 1, 0 )
angular_velocity = 30.0
angular_velocity_random = 1.0
linear_accel = 4.0
scale = 3.0
scale_curve = SubResource( 5 )
color_ramp = SubResource( 3 )

[sub_resource type="QuadMesh" id=7]

[sub_resource type="SpatialMaterial" id=8]
flags_transparent = true
flags_unshaded = true
vertex_color_use_as_albedo = true
params_billboard_mode = 3
particles_anim_h_frames = 1
particles_anim_v_frames = 1
particles_anim_loop = false
albedo_texture = ExtResource( 1 )

[sub_resource type="SpatialMaterial" id=9]
flags_transparent = true
flags_unshaded = true
vertex_color_use_as_albedo = true
params_billboard_mode = 3
particles_anim_h_frames = 1
particles_anim_v_frames = 1
particles_anim_loop = false
albedo_texture = ExtResource( 5 )

[sub_resource type="SpatialMaterial" id=10]
flags_transparent = true
flags_unshaded = true
vertex_color_use_as_albedo = true
params_billboard_mode = 3
particles_anim_h_frames = 1
particles_anim_v_frames = 1
particles_anim_loop = false
albedo_texture = ExtResource( 4 )

[sub_resource type="SpatialMaterial" id=11]
flags_transparent = true
flags_unshaded = true
vertex_color_use_as_albedo = true
params_billboard_mode = 3
particles_anim_h_frames = 1
particles_anim_v_frames = 1
particles_anim_loop = false
albedo_texture = ExtResource( 3 )

[sub_resource type="Gradient" id=12]
offsets = PoolRealArray( 0, 0.594595, 1 )
colors = PoolColorArray( 0, 0, 0, 0, 0.470588, 0.470588, 0.470588, 0.282353, 1, 1, 1, 0 )

[sub_resource type="GradientTexture" id=13]
gradient = SubResource( 12 )

[sub_resource type="Curve" id=14]
_data = [ Vector2( 0.00239234, 0.328829 ), 0.0, 0.223291, 0, 0, Vector2( 1, 1 ), 2.30244, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=15]
curve = SubResource( 14 )

[sub_resource type="ParticlesMaterial" id=16]
emission_shape = 1
emission_sphere_radius = 0.2
spread = 0.0
gravity = Vector3( 0, 1, 0 )
angular_velocity = 30.0
angular_velocity_random = 1.0
linear_accel = 4.0
angle = 360.0
angle_random = 1.0
scale = 5.0
scale_random = 0.5
scale_curve = SubResource( 15 )
color_ramp = SubResource( 13 )

[sub_resource type="SphereShape" id=17]

[node name="Fireball" type="Spatial"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0.00418067 )
script = ExtResource( 6 )

[node name="Flames1" type="Particles" parent="."]
material_override = SubResource( 1 )
amount = 4
local_coords = false
process_material = SubResource( 6 )
draw_pass_1 = SubResource( 7 )
__meta__ = {
"_editor_description_": ""
}

[node name="Flames2" type="Particles" parent="."]
material_override = SubResource( 8 )
amount = 4
local_coords = false
process_material = SubResource( 6 )
draw_pass_1 = SubResource( 7 )
__meta__ = {
"_editor_description_": ""
}

[node name="Flames3" type="Particles" parent="."]
material_override = SubResource( 9 )
amount = 4
local_coords = false
process_material = SubResource( 6 )
draw_pass_1 = SubResource( 7 )
__meta__ = {
"_editor_description_": ""
}

[node name="Flames4" type="Particles" parent="."]
material_override = SubResource( 10 )
amount = 4
local_coords = false
process_material = SubResource( 6 )
draw_pass_1 = SubResource( 7 )
__meta__ = {
"_editor_description_": ""
}

[node name="Smoke" type="Particles" parent="."]
transform = Transform( 1, 0, 0, 0, -1, 1.50996e-07, 0, -1.50996e-07, -1, 0, 0, 0.00418067 )
material_override = SubResource( 11 )
amount = 32
lifetime = 2.0
speed_scale = 0.25
local_coords = false
process_material = SubResource( 16 )
draw_pass_1 = SubResource( 7 )
__meta__ = {
"_editor_description_": ""
}

[node name="OmniLight" type="OmniLight" parent="."]
light_color = Color( 1, 0.74902, 0, 1 )
light_energy = 5.0
omni_range = 13.8758

[node name="FireballCollision" type="Area" parent="."]
collision_layer = 4
collision_mask = 11

[node name="CollisionShape" type="CollisionShape" parent="FireballCollision"]
shape = SubResource( 17 )
[connection signal="body_entered" from="FireballCollision" to="." method="_on_FireballCollision_body_entered"]
